--- a/RMS.App/Views/Departments/Details.cshtml
+++ b/RMS.App/Views/Departments/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) 
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null, new {@class="btn btn-info"})
 </p>
