--- a/RMS.App/Views/Departments/Edit.cshtml
+++ b/RMS.App/Views/Departments/Edit.cshtml
@@ -17,34 +17,35 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-6">
+            <div class="col-md-4">
                 @Html.DropDownList("OrganizationId", null, htmlAttributes: new {@class = "form-control"})
                 @Html.ValidationMessageFor(model => model.OrganizationId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-6">
+            <div class="col-md-4">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-6">
+            <div class="col-md-4">
                 @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Update" class="btn btn-default"/>
-                @Html.ActionLink("Back to List", "Index",null, new {@class="btn btn-info"})
+        <div class="form-group row">
+            <div class="control-label col-md-2 "></div>
+            <div class="col-md-10">
+                <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
             </div>
         </div>
     </div>
