--- a/RMS.App/Views/Designations/Index.cshtml
+++ b/RMS.App/Views/Designations/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "Index";
 }
+<br/>
+<h2>Designation List</h2>
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-info">
@@ -17,15 +19,13 @@
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+        <div class="col-lg-6 col-sm-6 col-8 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "Designations", FormMethod.Get))
                 {
-
                     <b>Search</b>
                     @Html.TextBox("searchDesignationTitle")
                     <input type="submit" value="Search" />
-
                 }
             </p>
         </div>
