--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
-                    @Url.Action("Index", "Home")<img src="~/Content/img/logo.png" alt="" title="" />
+                    <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/logo.png" alt="Home Logo" title="Home" /></a>
                 </div>
 
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
