--- a/RMS.App/Views/Designations/Delete.cshtml
+++ b/RMS.App/Views/Designations/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
 <div>
     <h4>Designation</h4>
     <hr />
@@ -25,7 +25,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-denger" /> 
+            <input type="submit" value="Delete" class="btn btn-denger" /> &nbsp;
             @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
