--- a/RMS.App/Views/Organizations/Delete.cshtml
+++ b/RMS.App/Views/Organizations/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
 <div>
     <h4>Organization</h4>
     <hr />
