--- a/RMS.App/Views/Organizations/Details.cshtml
+++ b/RMS.App/Views/Organizations/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id},htmlAttributes:new {@class="btn btn-warning"})
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id},htmlAttributes:new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null, htmlAttributes: new {@class="btn btn-info"})
 </p>
