--- a/RMS.App/Views/Vehicles/Delete.cshtml
+++ b/RMS.App/Views/Vehicles/Delete.cshtml
@@ -6,13 +6,13 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
 <div>
     <h4>Vehicle</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.VehicleType.Name)
+            @Html.DisplayNameFor(model => model.VehicleTypeId)
         </dt>
 
         <dd>
@@ -57,7 +57,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> 
+            <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
             @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
