--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
 }
 <br/>
+<h2>Vehicle List</h2>
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-info">
@@ -18,20 +19,18 @@
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+        <div class="col-lg-6 col-sm-6 col-8 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "Vehicles", FormMethod.Get))
                 {
-
                     <b>Search</b>
                     @Html.TextBox("searchTextVehicleBrand")
                     <input type="submit" value="Search" />
-
                 }
             </p>
         </div>
+    </div>
 </div>
-<br />
 
 <table class="table table-bordered table-active table-striped">
     <tr>
@@ -39,7 +38,7 @@
             SL
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.VehicleType)
+            @Html.DisplayNameFor(model => model.VehicleTypeId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BrandName)
@@ -98,6 +97,5 @@
             </tr>
         }
     }
-
 
 </table>
